// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliased named import 1`] = `
"
import { myFunc as myAliasFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myAliasFunc from './tests/testmodule/myFunc.js';
"
`;

exports[`aliased namespace import 1`] = `
"
import { thangs } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as thangs from './tests/testmodule/constants.js';
"
`;

exports[`common js default import 1`] = `
"
import React from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from './commonjsmodule';
"
`;

exports[`common js default with named import 1`] = `
"
import React, { Component } from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from './commonjsmodule';
"
`;

exports[`default import 1`] = `
"
import myFunc from 'testmodule/myFunc'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from 'testmodule/myFunc';
"
`;

exports[`default import with multiple named import 1`] = `
"
import init, { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import init from './tests/testmodule/index.js';
import myFunc from './tests/testmodule/myFunc.js';
import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`glob import 1`] = `
"
import * as testmodule from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as testmodule from 'testmodule';
"
`;

exports[`import export in single line 1`] = `
"
import { myInlineExport } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myInlineFunc as myInlineExport } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`multiple named imports 1`] = `
"
import { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from './tests/testmodule/myFunc.js';
import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`nested named import 1`] = `
"
import { myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myOtherFunc } from './tests/testmodule/myOtherFunc.js';
"
`;

exports[`single named import 1`] = `
"
import { myFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from './tests/testmodule/myFunc.js';
"
`;

exports[`unresolved default import 1`] = `
"
import React from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'reacty';
"
`;

exports[`unresolved default import with named import 1`] = `
"
import React, { Component } from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from 'reacty';
"
`;
